# sw-sync-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.credentials.toml
.github/: dependabot.yml
.github/scripts/: comment-coverage.js  main-coverage.js
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
data/: 10kProducts.csv
fixtures/: entity-schema-2024-08-01.json
profiles/: default_advanced_price.yaml  default_cross_selling.yaml  default_customer.yaml  default_media.yaml  default_newsletter_recipient.yaml  default_order.yaml  default_product.yaml  default_product_variants.yaml  default_promotion_code.yaml  default_promotion_discount.yaml  default_property.yaml  default_variant_configuration.yaml  manufacturer.yaml  product.yaml  product_required.yaml  product_variants.yaml  product_with_manufacturer.yaml
src/: api.rs  build.rs  cli.rs  config.rs  config_file.rs  main.rs
src/api/: filter.rs  mod.rs
src/data/: export.rs  import.rs  mod.rs  profiles.rs  transform.rs  validate.rs
src/data/transform/: mod.rs  script.rs
src/resources/profiles/: manufacturer.yaml
