[package]
name = "sw-sync-cli"
version = "0.7.1"
edition = "2021"
description = "CLI for fast and flexible data transfer between shopware and (CSV) files over API"
keywords = ["cli", "shopware", "import", "export"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
authors = ["shopware AG <info@shopware.com>", "Malte Janz <service.malte.j@protonmail.com>"]
repository = "https://github.com/shopware/sw-sync-cli"
license = "MIT"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "string"] }
tokio = { version = "1.39.2", features = ["full"] }
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.33"
toml = "0.8.19"
thiserror = "1.0.63"
anyhow = "1.0.86"
csv = "1.3.0"
itertools = "0.13.0"
rhai = { version = "1.19.0", features = ["serde", "sync"] }

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
# for performance profiling
# strip = false
# debug = true
