[package]
name = "sw-sync-cli"
version = "0.9.0"
edition = "2021"
description = "CLI for fast and flexible data transfer between shopware and (CSV) files over API"
keywords = ["cli", "shopware", "import", "export"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
authors = ["shopware AG <info@shopware.com>", "Malte Janz <service.malte.j@protonmail.com>"]
repository = "https://github.com/shopware/sw-sync-cli"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "string"] }
rayon = "1.10.0"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.33"
toml = "0.8.19"
thiserror = "1.0.64"
anyhow = "1.0.89"
csv = "1.3.0"
itertools = "0.13.0"
rhai = { version = "1.19.0", features = ["serde", "sync"] }

[dev-dependencies]
mockito = "1.5.0"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
# for performance profiling
# strip = false
# debug = true
